--- a/AronaBot.ipynb
+++ b/AronaBot.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,8 +95,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title 启动！\n",
+        "%cd /content/AronaBot\n",
+        "botAmount = 5 # @param {type:\"number\"}\n",
         "import mineflayer\n",
-        "!node AronaBot.js"
+        "!node AronaBot.js $botAmount"
       ],
       "metadata": {
         "id": "U1ZTznJHWY47"
@@ -122,7 +126,8 @@
         "  bot2.chat('/login qwertyuiop1');"
       ],
       "metadata": {
-        "id": "LamvxTaAWbPu"
+        "id": "LamvxTaAWbPu",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
